--- a/src/app/shared/components/base-scene/base-scene.html
+++ b/src/app/shared/components/base-scene/base-scene.html
@@ -22,10 +22,8 @@
       <a-sphere
         class="route-hold"
         [attr.position]="routeHold.position.x + ' ' + routeHold.position.y + ' ' + routeHold.position.z"
-        radius="0.05"
-        [attr.color]="routeHold.color"
-        [attr.material]="'emissive: ' + routeHold.color + '; emissiveIntensity: 0.3'"
-        opacity="0.9">
+        radius="0.06"
+        [attr.material]="'color: ' + routeHold.color + '; emissive: ' + routeHold.color + '; emissiveIntensity: 0.8; opacity: 0.85; transparent: true'">
       </a-sphere>
     }
 
