--- a/src/app/vr/pages/vr-climbing/vr-climbing.scss
+++ b/src/app/vr/pages/vr-climbing/vr-climbing.scss
@@ -9,4 +9,10 @@
   position: absolute;
   inset: 0;
   z-index: 100;
+
+  .settings-panel {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
 }
