--- a/src/app/shared/components/settings-panel/settings-panel.component.scss
+++ b/src/app/shared/components/settings-panel/settings-panel.component.scss
@@ -24,6 +24,15 @@
       font-size: 0.9rem;
     }
 
+    &--slider {
+      flex-direction: column;
+      align-items: stretch;
+
+      label {
+        margin-bottom: 0.5rem;
+      }
+    }
+
     select {
       padding: 0.5rem;
       border-radius: 4px;
@@ -42,6 +51,33 @@
       width: 20px;
       height: 20px;
       cursor: pointer;
+    }
+
+    input[type="range"] {
+      width: 100%;
+      height: 6px;
+      cursor: pointer;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 3px;
+      outline: none;
+
+      &::-webkit-slider-thumb {
+        appearance: none;
+        width: 18px;
+        height: 18px;
+        background: white;
+        border-radius: 50%;
+        cursor: pointer;
+      }
+
+      &::-moz-range-thumb {
+        width: 18px;
+        height: 18px;
+        background: white;
+        border-radius: 50%;
+        cursor: pointer;
+        border: none;
+      }
     }
   }
 }
