--- a/src/app/vr/pages/vr-calibration-page/vr-calibration-page.html
+++ b/src/app/vr/pages/vr-calibration-page/vr-calibration-page.html
@@ -152,7 +152,8 @@
     <a-entity 
       id="wall-container" 
       position="0 0 -2"
-      wall-manipulator="leftController: #leftController; rightController: #rightController">
+      wall-manipulator="leftController: #leftController; rightController: #rightController"
+      triangle-align="animate: true; animationDuration: 1000">
       @if (modelPath()) {
         <a-entity
           id="garage"
